# AgentPod

./: .env.example  .gitattributes  CHANGELOG.md  Dockerfile  README.md  install.sh  pyproject.toml
agents/: README.md  THIRD_PARTY_SKILLS.md
agents/apply-verify/: .mcp.json  CLAUDE.md  dut.md  report-template.html  run-log.md  spec.md
agents/spec-inspect/: CLAUDE.md  spec.md  testplan.md  ui-inventory.md
docker/: agent-entrypoint.sh  agent-skills.py
docs/: bitbucket-ssh-guide.html  export-guide.html  git-identity-guide.html  how-it-works.html  skills-guide.html  user-guide.html  wsl2-guide.html
docs/dev/: BUILD-GUIDE.md
docs/releases/: README.md  v0.1.0.md
docs/superpowers/plans/: 2026-07-03-agentpod-phase1.md
docs/superpowers/specs/: 2026-07-03-agentpod-phase1-design.md
src/agentpod/: cli.py  config.py  context.py  docker_ctl.py  naming.py  paths.py  plugins.py  registry.py  session.py
tests/: test_cli.py  test_config.py  test_context.py  test_docker_ctl.py  test_naming.py  test_paths.py  test_plugins.py  test_registry.py  test_session.py  test_skills_manifest.py
