[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpod"
version = "0.1.0"
description = "Docker-isolated autonomous AI coding agent containers"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["typer>=0.12"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agentpod = "agentpod.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpod"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["integration: requires a running Docker daemon (deselect with -m 'not integration')"]
